<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011. Efstratios Xakoustos all rights reserved. -->

<resources>
    <string name="app_name">Ultra-Pomodoro</string>
    <string name="no_tasks">No tasks yet. Add tasks using the menu button of your phone.\n</string>
    <string name="task_hints">
    - Priority one is high priority.\n
    - Effort is the estimated pomodoros to complete the task.\n
    - Break down tasks that will take more than 7 pomodoros.\n
    </string>
    <string name="title_hint">Give a task\'s short description</string>
    <string name="default_task_title">An important task</string>
    <string name="day_to_day_title">Average over the last </string>
    <string name="days">days</string>
    <string name="days_capped">Days</string>
    <string name="day">Day</string>
    <string name="today">Today</string>
    <string name="three_days">3 Days</string>
    <string name="five_days">5 Days</string>
    <string name="fifteen_days">15 Days</string>
    <string name="thirty_days">30 Days</string>
    <string name="tasks">Tasks</string>
    <string name="pomodoros">Pomodoros</string>
    <string name="hours">Hrs</string>
    <string name="hours_worked">Hours worked</string>
    <string name="work_units_per_pomodoro">Estimated vs real effort</string>
    <string name="tasks_per_pomodoro">Tasks per pomodoro</string>
    <string name="quit">Quit</string>
    <string name="statistics">Statistics</string>
    <string name="pomodoros_started">Pomodoros started: </string>
    <string name="pomodoros_completed">Pomodoros completed: </string>
    <string name="tasks_completed">Tasks completed: </string>
    <string name="work_units_completed">Estimated effort completed: </string>
    <string name="time_worked">Total time worked: </string>
    <string name="time_break">Total break time: </string>
    <string name="overall_tab_title">Overall statistics</string>
    <string name="day_to_day_tab_title">Day to day statistics</string>
    <string name="more_tab_title">More</string>
    <string name="more_tab_content">AD pitch here!</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    <string name="add">New</string>
    <string name="menu_insert">Add Task</string>
    <string name="menu_delete">Delete Task</string>
    <string name="menu_done">Task Done/Undone</string>
    <string name="title">Task\'s title: </string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="work_units">Effort</string>
    <string name="work_units_short">EE</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note">Edit Task</string>
    <string name="preference_menu">Preferences</string>
    <string name="timer_preferences">Timer Length Setup</string>
    <string name="sound_preferences">Sound Setup</string>
    <string name="pomodoro_length">Pomodoro length</string>
    <string name="pomodoro_preference_summary">Enter the length of your pomodoro in minutes. Don\'t over/under do it.
    </string>
    <string name="small_break_length">Small break length</string>
    <string name="small_break_summary">Enter the length of your small break in minutes. I said small!</string>
    <string name="big_break_length">Big break length</string>
    <string name="big_break_summary">Enter the length of your big break in minutes. Maximum: 24 hours :)</string>
    <string name="pomodoro_interval">Big break Interval</string>
    <string name="pomodoro_interval_summary">Suggested value is 4 adjust according to your preferences</string>
    <string name="chime_title">Chiming</string>
    <string name="chime_preference_summary">Enable/Disable the audible chime at the end of a timer</string>
    <string name="tick_title">Ticking</string>
    <string name="tick_preference_summary">Enable/Disable the ticking sound</string>
    <string name="help_text"><b>Help text goes here.</b> \n
        Oh rly?
        Ya rly!</string>
    <string name="reset_statics">Reset Statistics</string>
    <string name="reset_daily_btn">Daily Statistics</string>
    <string name="reset_overall_btn">Overall Statistics</string>
    <string name="updates"> </string>
    <string name="eula">
        END-USER LICENSE AGREEMENT FOR THE ULTRA-POMODORO APPLICATION IMPORTANT PLEASE READ THE TERMS AND CONDITIONS OF
        THIS LICENSE
        AGREEMENT CAREFULLY BEFORE CONTINUING WITH THIS PROGRAM INSTALL: Efstratios Xakoustos End-User License Agreement
        (\"EULA\") is a legal agreement between you (either an individual or a single entity) and Efstratios Xakoustos
        for
        the Efstratios Xakoustos software product(s) identified above which may include associated software components,
        media, printed materials, and \"online\" or electronic documentation (\"SOFTWARE PRODUCT\"). By installing,
        copying,
        or otherwise using the SOFTWARE PRODUCT, you agree to be bound by the terms of this EULA. This license
        agreement represents the entire agreement concerning the program between you and Efstratios Xakoustos, (referred
        to
        as \"licenser\"), and it supersedes any prior proposal, representation, or understanding between the parties.
        If you do not agree to the terms of this EULA, do not install or use the SOFTWARE PRODUCT.\n
        \n
        The SOFTWARE PRODUCT is protected by copyright laws and international copyright treaties, as well as other
        intellectual property laws and treaties. The SOFTWARE PRODUCT is licensed, not sold.\n
        \n
        1. GRANT OF LICENSE.\n
        The SOFTWARE PRODUCT is licensed as follows:\n
        (a) Installation and Use.\n
        Efstratios Xakoustos grants you the right to install and use copies of the SOFTWARE PRODUCT on your computer
        running a validly licensed copy of the operating system for which the SOFTWARE PRODUCT was designed [e.g.,
        Android,
        iOS, Window Phone 7].\n
        (b) Backup Copies.\n
        You may also make copies of the SOFTWARE PRODUCT as may be necessary for backup and archival purposes.\n
        \n
        2. DESCRIPTION OF OTHER RIGHTS AND LIMITATIONS.\n
        (a) Maintenance of Copyright Notices.\n
        You must not remove or alter any copyright notices on any and all copies of the SOFTWARE PRODUCT.\n
        (b) Distribution.\n
        You may not distribute registered copies of the SOFTWARE PRODUCT to third parties. Evaluation versions available
        for
        download from Efstratios Xakoustos\'s websites may be freely distributed.\n
        © Prohibition on Reverse Engineering, Decompilation, and Disassembly.\n
        You may not reverse engineer, decompile, or disassemble the SOFTWARE PRODUCT, except and only to the extent that
        such
        activity is expressly permitted by applicable law notwithstanding this limitation.\n
        (d) Rental.\n
        You may not rent, lease, or lend the SOFTWARE PRODUCT.\n
        (e) Support Services.\n
        Efstratios Xakoustos may provide you with support services related to the SOFTWARE PRODUCT (\"Support
        Services\").
        Any supplemental software code provided to you as part of the Support Services shall be considered part of the
        SOFTWARE
        PRODUCT and subject to the terms and conditions of this EULA.
        (f) Compliance with Applicable Laws.\n
        You must comply with all applicable laws regarding use of the SOFTWARE PRODUCT.\n
        \n
        3. TERMINATION\n
        Without prejudice to any other rights, Efstratios Xakoustos may terminate this EULA if you fail to comply with
        the
        terms and conditions of this EULA. In such event, you must destroy all copies of the SOFTWARE PRODUCT in your
        possession.\n
        \n
        4. COPYRIGHT\n
        All title, including but not limited to copyrights, in and to the SOFTWARE PRODUCT and any copies thereof are
        owned by
        Efstratios Xakoustos or his suppliers. All title and intellectual property rights in and to the content which
        may
        be accessed through use of the SOFTWARE PRODUCT is the property of the respective content owner and may be
        protected
        by applicable copyright or other intellectual property laws and treaties. This EULA grants you no rights to use
        such
        content. All rights not expressly granted are reserved by Efstratios Xakoustos.\n
        \n
        5. NO WARRANTIES\n
        Efstratios Xakoustos expressly disclaims any warranty for the SOFTWARE PRODUCT. The SOFTWARE PRODUCT is provided
        \'As Is\' without any express or implied warranty of any kind, including but not limited to any warranties of
        merchantability, noninfringement, or fitness of a particular purpose. Efstratios Xakoustos does not warrant or
        assume responsibility for the accuracy or completeness of any information, text, graphics, links or other items
        contained within the SOFTWARE PRODUCT. Efstratios Xakoustos makes no warranties respecting any harm that may be
        caused by the transmission of a computer virus, worm, time bomb, logic bomb, or other such computer program.
        Null
        Pointer Engineering further expressly disclaims any warranty or representation to Authorized Users or to any
        third
        party.\n
        \n
        6. LIMITATION OF LIABILITY\n
        In no event shall Efstratios Xakoustos be liable for any damages (including, without limitation, lost profits,
        business interruption, or lost information) rising out of \'Authorized Users\' use of or inability to use the
        SOFTWARE
        PRODUCT, even if Efstratios Xakoustos has been advised of the possibility of such damages. In no event will Null
        Pointer Engineering be liable for loss of data or for indirect, special, incidental, consequential (including
        lost
        profit), or other damages based in contract, tort or otherwise. Efstratios Xakoustos shall have no liability
        with
        respect to the content of the SOFTWARE PRODUCT or any part thereof, including but not limited to errors or
        omissions
        contained therein, libel, infringements of rights of publicity, privacy, trademark rights, business
        interruption,
        personal injury, loss of privacy, moral rights or the disclosure of confidential information.\n
    </string>
    <string name="select_task">Select task</string>
    <string name="working_on">Working on:</string>
</resources>
